[package]
name = "luma_dev"
version = "0.1.0"
edition = "2021"

[dependencies]
luma = { path="C:/Users/user/Documents/luma" }
wgpu = "22.0.0"
bytemuck = "1.16.1"
futures-intrusive = "0.5.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11.4"
pollster = "0.3.0"
flume = "0.11.0"